--- a/edmondsonline/templates/base.html
+++ b/edmondsonline/templates/base.html
@@ -14,16 +14,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('main.index') }}">Edmonds Online</a>
+                <a class="navbar-brand" href="{{ url_for('landing.landing') }}">Edmonds Online</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('main.index') }}">{{ _('Home') }}</a></li>
+                    {% if current_user.is_anonymous %}
+                    <li><a href="{{ url_for('main.index') }}">{{ _('Blog') }}</a></li>
+                    <li><a href="{{ url_for('landing.articles') }}">{{ _('Articles') }}</a></li>
+                    <li><a href="{{ url_for('landing.poems') }}">{{ _('Poems') }}</a></li>
+                    {% else %}
                     <li><a href="{{ url_for('main.explore') }}">{{ _('Explore') }}</a></li>
+                    <li><a href="{{ url_for('main.explore') }}">{{ _('Explore') }}</a></li>
+                    {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('auth.login') }}">{{ _('Login') }}</a></li>
+                    <li><a href="{{ url_for('auth.register') }}">{{ _('Register') }}</a></li>
                     {% else %}
                     <li><a href="{{ url_for('main.user', username=current_user.username) }}">{{ _('Profile') }}</a></li>
                     <li><a href="{{ url_for('auth.logout') }}">{{ _('Logout') }}</a></li>
