--- a/edmondsonline/templates/landing/landing.html
+++ b/edmondsonline/templates/landing/landing.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
-
 {% block app_content %}
+<style type="text/css">
+    
+</style>
     <h1></h1>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" width=1200px hight=400px>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -13,7 +15,7 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      <div class="item active">
+      <div class="item">
         <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
         <div class="carousel-caption">
           <h3>Sell $</h3>
@@ -21,8 +23,8 @@
         </div>      
       </div>
 
-      <div class="item">
-        <img src="{{ url_for('static', filename='/media/poor_cat.jpg') }}">
+      <div class="item active">
+        <img src="{{ url_for('static', filename='/media/poor_cat.jpg') }}"  class="image-responsive"alt="image">
         <div class="carousel-caption">
           <h3>Cats Can Be infected..</h3>
           <p>but not dogs</p>
@@ -63,8 +65,6 @@
   </div>
 </div><br>
 
-<footer class="container-fluid text-center">
-  <p>Footer Text</p>
-</footer>
+
 
 {% endblock %}
