major changes: Articles added, more information on COVID, Drop down Menu

--- a/edmondsonline/templates/articles/selfchecker.html
+++ b/edmondsonline/templates/articles/selfchecker.html
@@ -7,7 +7,7 @@
     <div id="ember63" class="col-sm-12 ember-view">
     <div id="ember64" class="iframe-card ember-view">  
     <div id="ember65" class="hub-iframe ember-view">  
-    <iframe scrolling="no" frameborder="0" style="width: 1000px; height: 800px" title="" src="https://www.nature.com/articles/d41586-020-00984-8"></iframe>
+    <iframe scrolling="no" frameborder="0" style="width: 1000px; height: 800px" title="" src="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/index.html#cdc-chat-bot-open"></iframe>
 </div>
 </div>
 </div>
