--- a/edmondsonline/templates/base.2.html
+++ b/edmondsonline/templates/base.2.html
@@ -7,49 +7,35 @@
 {% block navbar %}
     <nav class="navbar navbar-default">
         <div class="container">
-           <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{{ url_for('landing.landing') }}">Edmonds Online</a>
-            </div>
-          <div class="collapse navbar-collapse bs-example-js-navbar-collapse"> 
-          <ul class="nav navbar-nav">
-            {% if current_user.is_anonymous %}
+            <div class="navbar-header">
+                    {% if current_user.is_anonymous %}
+<div class="container-fluid"> 
+<div class="navbar-header">
+     <button class="collapsed navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-example-js-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span> 
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          </button> <a href="#" class="navbar-brand">Project Name</a>
+          </div> <div class="collapse navbar-collapse bs-example-js-navbar-collapse"> 
+          <ul class="nav navbar-nav"> 
+          <li class="dropdown"> 
+          <a href="#" class="dropdown-toggle" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Dropdown <span class="caret"></span> </a> 
+          <ul class="dropdown-menu" aria-labelledby="drop1">
+                    <li><a href="{{ url_for('covid.wastate') }}">{{ _('COVID-19 WA State Map') }}</a></li>
+                    <li><a href="{{ url_for('covid.graphs') }}">{{ _('COVID-19 Graphs') }}</a></li>
+                    <li><a href="{{ url_for('covid.resources') }}">{{ _('COVID-19 Resources') }}</a></li>
+               </ul>
+               </li> 
+               </ul> 
+
+                    {% else %}
                     <li><a href="{{ url_for('main.index') }}">{{ _('Blog') }}</a></li>
                     <li><a href="{{ url_for('landing.articles') }}">{{ _('Articles') }}</a></li>
                     <li><a href="{{ url_for('landing.poems') }}">{{ _('Poems') }}</a></li>
-                    <!-- begin drop down -->
-                    <li class="dropdown"> 
-                    <a href="#" class="dropdown-toggle" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> COVID-19 <span class="caret"></span> </a> 
-                    <ul class="dropdown-menu" aria-labelledby="drop1">
                     <li><a href="{{ url_for('covid.wastate') }}">{{ _('COVID-19 WA State Map') }}</a></li>
-                    <li><a href="{{ url_for('covid.graphs') }}">{{ _('COVID-19 Heat Map + Graphs') }}</a></li>
+                    <li><a href="{{ url_for('covid.graphs') }}">{{ _('COVID-19 Graphs') }}</a></li>
                     <li><a href="{{ url_for('covid.resources') }}">{{ _('COVID-19 Resources') }}</a></li>
-                    <li><a href="{{ url_for('covid.covidfaq') }}">{{ _('COVID-19 FAQ') }}</a></li>
-                    <li><a href="{{ url_for('covid.whoworld') }}">{{ _('COVID-19 Interactive World Map') }}</a></li>
-                </ul>
-               </li> 
-               </ul> 
-                    {% else %}
-                    <li><a href="{{ url_for('main.index') }}">{{ _('Your Posts') }}</a></li>
-                    <li><a href="{{ url_for('main.explore') }}">{{ _('All Posts') }}</a></li>
-                    <li><a href="{{ url_for('landing.articles') }}">{{ _('Articles') }}</a></li>
-                    <li><a href="{{ url_for('landing.poems') }}">{{ _('Poems') }}</a></li>
-                    <!-- begin drop down Logged in -->
-                    <li class="dropdown"> 
-                    <a href="#" class="dropdown-toggle" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> COVID-19 <span class="caret"></span> </a> 
-                    <ul class="dropdown-menu" aria-labelledby="drop1">
-                    <li><a href="{{ url_for('covid.wastate') }}">{{ _('COVID-19 WA State Map') }}</a></li>
-                    <li><a href="{{ url_for('covid.graphs') }}">{{ _('COVID-19 Heat Map + Graphs') }}</a></li>
-                    <li><a href="{{ url_for('covid.resources') }}">{{ _('COVID-19 Resources') }}</a></li>
-                    <li><a href="{{ url_for('covid.covidfaq') }}">{{ _('COVID-19 FAQ') }}</a></li>
-                    <li><a href="{{ url_for('covid.whoworld') }}">{{ _('COVID-19 Interactive World Map') }}</a></li>
-                </ul>
-               </li>
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -79,7 +65,7 @@
         {# application content needs to be provided in the app_content block #}
         {% block app_content %}{% endblock %}
     </div>
-    <footer class="navbar-fixed-bottom text-right">
+    <footer class="navbar-bottom text-center">
   <p>&copy; 2020 - Tempered Dynamics LLC</p>
 </footer>
 {% endblock %}
