--- a/edmondsonline/templates/base.3.html
+++ b/edmondsonline/templates/base.3.html
@@ -7,7 +7,7 @@
 {% block navbar %}
     <nav class="navbar navbar-default">
         <div class="container">
-           <div class="navbar-header">
+            <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -16,40 +16,22 @@
                 </button>
                 <a class="navbar-brand" href="{{ url_for('landing.landing') }}">Edmonds Online</a>
             </div>
-          <div class="collapse navbar-collapse bs-example-js-navbar-collapse"> 
-          <ul class="nav navbar-nav">
-            {% if current_user.is_anonymous %}
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('main.index') }}">{{ _('Blog') }}</a></li>
                     <li><a href="{{ url_for('landing.articles') }}">{{ _('Articles') }}</a></li>
                     <li><a href="{{ url_for('landing.poems') }}">{{ _('Poems') }}</a></li>
-                    <!-- begin drop down -->
-                    <li class="dropdown"> 
-                    <a href="#" class="dropdown-toggle" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> COVID-19 <span class="caret"></span> </a> 
-                    <ul class="dropdown-menu" aria-labelledby="drop1">
                     <li><a href="{{ url_for('covid.wastate') }}">{{ _('COVID-19 WA State Map') }}</a></li>
-                    <li><a href="{{ url_for('covid.graphs') }}">{{ _('COVID-19 Heat Map + Graphs') }}</a></li>
+                    <li><a href="{{ url_for('covid.graphs') }}">{{ _('COVID-19 Graphs') }}</a></li>
                     <li><a href="{{ url_for('covid.resources') }}">{{ _('COVID-19 Resources') }}</a></li>
-                    <li><a href="{{ url_for('covid.covidfaq') }}">{{ _('COVID-19 FAQ') }}</a></li>
-                    <li><a href="{{ url_for('covid.whoworld') }}">{{ _('COVID-19 Interactive World Map') }}</a></li>
-                </ul>
-               </li> 
-               </ul> 
                     {% else %}
-                    <li><a href="{{ url_for('main.index') }}">{{ _('Your Posts') }}</a></li>
-                    <li><a href="{{ url_for('main.explore') }}">{{ _('All Posts') }}</a></li>
+                    <li><a href="{{ url_for('main.index') }}">{{ _('Blog') }}</a></li>
                     <li><a href="{{ url_for('landing.articles') }}">{{ _('Articles') }}</a></li>
                     <li><a href="{{ url_for('landing.poems') }}">{{ _('Poems') }}</a></li>
-                    <!-- begin drop down Logged in -->
-                    <li class="dropdown"> 
-                    <a href="#" class="dropdown-toggle" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> COVID-19 <span class="caret"></span> </a> 
-                    <ul class="dropdown-menu" aria-labelledby="drop1">
                     <li><a href="{{ url_for('covid.wastate') }}">{{ _('COVID-19 WA State Map') }}</a></li>
-                    <li><a href="{{ url_for('covid.graphs') }}">{{ _('COVID-19 Heat Map + Graphs') }}</a></li>
+                    <li><a href="{{ url_for('covid.graphs') }}">{{ _('COVID-19 Graphs') }}</a></li>
                     <li><a href="{{ url_for('covid.resources') }}">{{ _('COVID-19 Resources') }}</a></li>
-                    <li><a href="{{ url_for('covid.covidfaq') }}">{{ _('COVID-19 FAQ') }}</a></li>
-                    <li><a href="{{ url_for('covid.whoworld') }}">{{ _('COVID-19 Interactive World Map') }}</a></li>
-                </ul>
-               </li>
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -79,7 +61,7 @@
         {# application content needs to be provided in the app_content block #}
         {% block app_content %}{% endblock %}
     </div>
-    <footer class="navbar-fixed-bottom text-right">
+    <footer class="navbar-fixed-bottom tCext-left">
   <p>&copy; 2020 - Tempered Dynamics LLC</p>
 </footer>
 {% endblock %}
