--- a/edmondsonline/templates/landing/articles.html
+++ b/edmondsonline/templates/landing/articles.html
@@ -5,18 +5,18 @@
  <div class="row">
   <div class="col-md-4">
     <div class="thumbnail">
-      <a href="/w3images/lights.jpg">
-        <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
+      <a href="{{ url_for('landing.wiki') }}">
+        <img src="{{ url_for('static', filename='/media/1280px-Stevens_Elementary.jpg') }}" alt="trump lump" style="width: 100%; height: 100%">
         <div class="caption">
-          <p>Lorem ipsum...</p>
+          <p>Cats can maybe get COVID.. Dogs Already have it</p>
         </div>
       </a>
     </div>
   </div>
-  <div class="col-md-4">
+    <div class="col-md-4">
     <div class="thumbnail">
       <a href="https://www.nature.com/articles/d41586-020-00984-8">
-        <img src="{{ url_for('static', filename='/media/poor_cat.jpg') }}" alt="trump lump" style="width:100%">
+        <img src="{{ url_for('static', filename='/media/poor_cat.jpg') }}" alt="trump lump" style="width: 100%">
         <div class="caption">
           <p>Cats can maybe get COVID.. Dogs Already have it</p>
         </div>
@@ -25,14 +25,24 @@
   </div>
   <div class="col-md-4">
     <div class="thumbnail">
-      <a href="{{ url_for('landing.art1') }}">
-        <img src="{{ url_for('static', filename='/media/trumplump.jpg') }}" alt="trump lump" style="width:100%">
+      <a href="{{ url_for('landing.vbart1') }}">
+        <img src="{{ url_for('static', filename='/media/trumplump.jpg') }}" alt="trump lump" style="width: 100% height: 100%">
         <div class="caption">
-          <p class="text-sm">So Here We Are..</p>
-          <p><h7>By Valerie Burgess</h7></p>
+          <p class="text-sm"><strong>So Here We Are..</strong><h7>  By Valerie Burgess</h7></p>
         </div>
       </a>
     </div>
   </div>
 </div>
+ <div class="row">
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="{{ url_for('landing.whoupdates') }}">
+        <img src="{{ url_for('static', filename='/media/who.jpg') }}" alt="World Health Organization" style="width:100%; height: 100%">
+        <div class="caption">
+          <p>World Health Organization Situation Reports</p>
+        </div>
+      </a>
+    </div>
+  </div>
 {% endblock %}
