--- a/edmondsonline/templates/landing/landing.1.html
+++ b/edmondsonline/templates/landing/landing.1.html
@@ -16,15 +16,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item">
-        <a href="{{ url_for('landing.selfchecker') }}">
-        <img src="{{ url_for('static', filename='/media/Covid.jpg') }}" class="image-responsive" alt="Covid"></a>
+        <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
         <div class="carousel-caption">
-          <h3>Self Checker</h3>
-          <p>Basic Self Diagnosis</p>
+          <h3>Sell $</h3>
+          <p>Money Money.</p>
         </div>      
       </div>
-      <div class="item active" style="width: 100%">
-        <img src="{{ url_for('static', filename='/media/poor_cat.jpg') }}" class="image-responsive" alt="Sick Cat" style="width: auto">
+
+      <div class="item active">
+        <img src="{{ url_for('static', filename='/media/poor_cat.jpg') }}"  class="image-responsive"alt="image">
         <div class="carousel-caption">
           <h3>Cats Can Be infected..</h3>
           <p>but not dogs</p>
@@ -42,16 +42,27 @@
       <span class="sr-only">Next</span>
     </a>
 </div>
-<div class="container  ">
-    <div id="ember61" class="bs-row row ember-view"> 
-    <div id="ember63" class="col-sm-12 ember-view">
-    <div id="ember64" class="iframe-card ember-view">  
-    <div id="ember65" class="hub-iframe ember-view">  
-    <iframe scrolling="no" frameborder="0" style="width: 1000px; height: 800px" title="" src="https://snoco-gis.maps.arcgis.com/apps/opsdashboard/index.html#/72574a34259d425087088239b2cc615d"></iframe>
-</div>
-</div>
-</div>
-</div>
+  
+<div class="container text-center">    
+  <h3>What We Do</h3><br>
+  <div class="row">
+    <div class="col-sm-4">
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Current Project</p>
+    </div>
+    <div class="col-sm-4"> 
+      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+      <p>Project 2</p>    
+    </div>
+    <div class="col-sm-4">
+      <div class="well">
+       <p>Some text..</p>
+      </div>
+      <div class="well">
+       <p>Some text..</p>
+      </div>
+    </div>
+  </div>
 </div><br>
 
 
