--- a/edmondsonline/templates/landing/articles.html
+++ b/edmondsonline/templates/landing/articles.html
@@ -55,5 +55,15 @@
       </a>
     </div>
   </div>
+     <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="{{ url_for('landing.guns') }}">
+        <img src="{{ url_for('static', filename='/media/lynnwood_gun.jpg') }}" alt="Lynnwood Guns" style="width: 100%; max-height: 262px; height: 100%">
+        <div class="caption">
+          <p>Local Gun Sales Increase</p>
+        </div>
+      </a>
+    </div>
+  </div>
 </div>
 {% endblock %}
